# TestTask

./: .gitmodules  README.md
task1/: Client.cpp  Client.h
task2/: CMakeLists.txt  CMakePresets.json  clang-tidy
task2/cmake/: CompileOptions.cmake
task2/src/: CMakeLists.txt
task2/src/Main/: CMakeLists.txt  main.cpp
task2/src/TopTracker/: CMakeLists.txt  PlayersAction.h  TopTracker.cpp  TopTracker.h
task2/src/TopTracker/UnitTests/: TopTrackerTest.cpp
task3/: task3.sql
